[package]
name = "voxel_game"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"

bytemuck = { version = "1.20.0", features = ["derive"] }
pollster = "0.4.0"

wgpu = "23.0.1"
winit = { version = "0.30.5", features = ["rwh_05"] }

image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }

anyhow = "1.0.94"